--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css"
+      integrity="sha512-EZLkOqwILORob+p0BXZc+Vm3RgJBOe1Iq/0fiI7r/wJgzOFZMlsqTa29UEl6v6U6gsV4uIpsNZoV32YZqrCRCQ=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Jamstack Explorers - Up and Running with Serverless Functions</title>
   </head>
-  <body>
+
+  <body class="container">
     <h1>Up and Running with Serverless Functions</h1>
     <button id="fetch-btn">Fetch</button>
+    <button id="fetch-pokedex-btn">Fetch Pokedex</button>
     <p id="response-output">Response Placeholder</p>
 
     <script>
       document.addEventListener('DOMContentLoaded', () => {
         const fetchBtn = document.getElementById('fetch-btn')
+        const fetchPokemonBtn = document.getElementById('fetch-pokedex-btn')
         const responseText = document.getElementById('response-output')
 
-        fetchBtn.addEventListener('click', () => {
-          responseText.innerText = 'Static Text Replacement'
+        fetchBtn.addEventListener('click', async () => {
+          const response = await fetch('/.netlify/functions/hello-world').then(
+            response => response.json()
+          )
+
+          responseText.innerText = JSON.stringify(response)
+        })
+
+        fetchPokemonBtn.addEventListener('click', async () => {
+          const response = await fetch('/.netlify/functions/pokedex').then(response => response.json())
+
+          responseText.innerText = JSON.stringify(response)
         })
       })
     </script>
   </body>
+
 </html>
